<resources>
    <string name="app_name">CleanScape</string>

    <string name="registrasi">REGISTRASI</string>
    <string name="login">LOGIN</string>

    <string name="nama_lengkap">Nama Lengkap :  </string>
    <string name="alamat_email">Alamat Email</string>
    <string name="password">Password</string>
    <string name="belum_punya_akun">Belum punya akun?</string>
    <string name="sudah_punya_akun">Sudah punya akun?</string>
    <string name="ulangi_password">Ulangi Password</string>
    <string name="develop_by">Develop By</string>

    <string name="trashbag">Trashbag</string>
    <string name="home">Home</string>
    <string name="profile">Profile</string>

    <string name="sampah_organik">Sampah Organik</string>
    <string name="trash_name">Nama Sampah</string>
    <string name="trash_names">Nama-nama Sampah</string>
    <string name="trash_description">Desc Sampah</string>

    <string name="ubah_password">UBAH PASSWORD</string>
    <string name="ubah_password_desc">Ubah Password</string>
    <string name="keranjang_sampah">Keranjang Sampah</string>
    <string name="histori_sampah">Histori Sampah</string>
    <string name="rekap_sampah">Rekap Sampah</string>
    <string name="logout">Logout</string>
    <string name="masukkan_jumlah_sampah_kg">Masukkan Jumlah Sampah (KG)</string>
    <string name="masukkan_jumlah_sampah">Masukkan Jumlah Sampah</string>
    <string name="dummy_jumlah_sampah">0.0 KG</string>
    <string name="deskripsi">Deskripsi</string>
    <string name="kumpulkan">Kumpulkan</string>
    <string name="angkut">Angkut</string>
    <string name="kurangi_jumlah_sampah">Kurangi Jumlah Sampah</string>
    <string name="tambah_jumlah_sampah">Tambahi Jumlah Sampah</string>
    <string name="atur_ulang">Atur Ulang</string>
    <string name="notifikasi">Notifikasi</string>
    <string name="histori_upload_sampah">Histori Upload Sampah</string>
    <string name="password_lama">Password Lama</string>
    <string name="password_baru">Password Baru</string>
    <string name="ulangi_password_baru">ulangi Password Baru</string>
    <string name="konfirmasi">KONFIRMASI</string>
    <string name="lupa_password_desc">email untuk melakukan pergantian password akan dikirimkan</string>
    <string name="lupa_kata_sandi">Lupa Kata Sandi?</string>
    <string name="jumlah_sampah">Jumlah Sampah:</string>
    <string name="jumlah_sampah_kg">Jumlah Sampah (KG)</string>

    <string name="landing_page">Selamatkan Bumi, Selamatkan Masa Depan.</string>
    <string name="background_logo_landing_page">Background Logo Landing Page</string>
    <string name="sign_in">Sign in</string>
    <string name="mulai">MULAI</string>
    <string name="alamat_desc">Dusun:</string>
    <string name="alamat">Alamat : </string>
    <string name="nomor_telp">Nomor Telp</string>
    <string name="daftar_sampah">Daftar Sampah</string>
    <string name="tambah_data_sampah">Tambah Data Sampah</string>
    <string name="nama">Nama</string>
    <string name="selamat_datang">Selamat Datang</string>
    <string name="tipe_sampah">Tipe Sampah</string>
    <string name="masukkan_nama_sampah">Masukkan Nama Sampah</string>
    <string name="pilih_tipe_sampah">Pilih Tipe Sampah</string>
    <string name="deskripsi_sampah">Deskripsi Sampah</string>
    <string name="masukkan_deskripsi_sampah">Masukkan Deskripsi Sampah</string>
    <string name="dusun_pengelola_sampah">Dusun Pengelola Sampah</string>
    <string name="masukkan_dusun_pengelola_sampah">Masukkan Dusun Pengelola Sampah</string>
    <string name="history">History</string>
    <string name="alamat_lengkap">Alamat Lengkap</string>
    <string name="masukkan_alamat_lengkap_anda">Masukkan Alamat Lengkap anda</string>

    <string-array name="array_tipe_sampah">

        <item>Organik</item>
        <item>Botol Plastik Bening</item>
        <item>Botol Plastik Berwarna</item>
        <item>Plastik</item>
        <item>Kardus</item>
        <item>Kertas</item>
        <item>Logam</item>
    </string-array>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="silahkan_masukkan_jumlah_sampah">Silahkan Masukkan Jumlah Sampah</string>
    <string name="lupa_password">LUPA PASSWORD</string>
    <string name="kg">KG</string>
    <string name="_1_0">1.0</string>

</resources>