<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:paddingVertical="24dp"
    android:paddingHorizontal="12dp">

    <TextView
        android:id="@+id/tvJumlahSampah"
        style="@style/TextDetail"
        android:paddingHorizontal="12dp"
        android:text="@string/masukkan_jumlah_sampah_kg"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytPlusMinus"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintEnd_toEndOf="@+id/tvJumlahSampah"
        app:layout_constraintStart_toStartOf="@+id/tvJumlahSampah"
        app:layout_constraintTop_toBottomOf="@+id/tvJumlahSampah">

        <ImageButton
            android:id="@+id/btnMinus"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/btn_rounded_start"
            android:contentDescription="@string/kurangi_jumlah_sampah"
            android:paddingHorizontal="24dp"
            android:src="@drawable/ic_remove"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etJumlahSampah"
            style="@style/TextDetail"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:background="@drawable/it_stroke"
            android:hint="@string/dummy_jumlah_sampah"
            android:padding="8dp"
            android:textAlignment="center"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toStartOf="@+id/btnPlus"
            app:layout_constraintStart_toEndOf="@+id/btnMinus"
            app:layout_constraintTop_toTopOf="parent" />

        <ImageButton
            android:id="@+id/btnPlus"
            android:layout_width="wrap_content"
            android:layout_height="0dp"
            android:background="@drawable/btn_rounded_end"
            android:contentDescription="@string/tambah_jumlah_sampah"
            android:paddingHorizontal="24dp"
            android:src="@drawable/ic_add"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
