<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/card_view"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_gravity="center"
    android:layout_marginStart="8dp"
    android:layout_marginTop="4dp"
    android:layout_marginEnd="8dp"
    android:layout_marginBottom="4dp"
    android:backgroundTintMode="src_in"
    card_view:cardBackgroundColor="@color/primary"
    card_view:cardCornerRadius="12dp">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/cardd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="8dp">

        <ImageView
            android:id="@+id/ivTrashPhoto"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:scaleType="centerCrop"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="parent"
            card_view:layout_constraintTop_toTopOf="parent"
            tools:src="@tools:sample/avatars" />

        <TextView
            android:id="@+id/tvTrashName"
            style="@style/TextDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="8dp"
            android:text="@string/trash_name"
            android:textColor="@color/white"
            android:textSize="16sp"
            android:textStyle="bold"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/ivTrashPhoto"
            card_view:layout_constraintTop_toTopOf="@+id/ivTrashPhoto" />

        <TextView
            android:id="@+id/tvTrashDescription"
            style="@style/TextSubDetail"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:ellipsize="end"
            android:justificationMode="inter_word"
            android:maxLines="3"
            android:text="@string/trash_description"
            android:textColor="@color/white"
            card_view:layout_constraintBottom_toTopOf="@+id/tvTrashAddress"
            card_view:layout_constraintEnd_toEndOf="@+id/tvTrashName"
            card_view:layout_constraintStart_toStartOf="@+id/tvTrashName"
            card_view:layout_constraintTop_toBottomOf="@+id/tvTrashName" />

        <TextView
            android:id="@+id/tvAlamatDesc"
            style="@style/TextSubDetail"
            android:text="@string/alamat_desc"
            android:textColor="@color/white"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintStart_toStartOf="@+id/tvTrashDescription" />

        <TextView
            android:id="@+id/tvTrashAddress"
            style="@style/TextSubDetail"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="4dp"
            android:layout_marginEnd="8dp"
            android:text="@string/alamat"
            android:textColor="@color/white"
            card_view:layout_constraintBottom_toBottomOf="parent"
            card_view:layout_constraintEnd_toEndOf="parent"
            card_view:layout_constraintStart_toEndOf="@+id/tvAlamatDesc" />
    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.cardview.widget.CardView>