<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_gradient_135"
    tools:context=".ui.activity.LoginActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="64dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_fix"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytConstraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:paddingVertical="24dp"
        android:paddingHorizontal="12dp"
        android:background="@drawable/bg_rounded_top"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo">

        <TextView
            android:id="@+id/tvLogin"
            style="@style/TextTitle"
            android:text="@string/login"
            android:textSize="42sp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvLogin">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                style="@style/TextDetail"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/it_stroke_rounded"
                android:paddingVertical="12dp"
                android:paddingHorizontal="24dp"
                android:hint="@string/alamat_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="12dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytEmail" >

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPass"
                style="@style/TextDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/it_stroke_rounded"
                android:paddingVertical="12dp"
                android:paddingHorizontal="24dp"
                android:hint="@string/password" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvPassword"
            style="@style/TextDetail"
            android:layout_marginTop="12dp"
            android:text="@string/lupa_kata_sandi"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytPass" />

        <TextView
            android:id="@+id/tvAkun"
            style="@style/TextDetail"
            android:layout_marginTop="12dp"
            android:text="@string/belum_punya_akun"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytPass" />

        <Button
            android:id="@+id/btnLogin"
            style="@style/TextDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@drawable/btn_rounded"
            android:text="@string/login"
            android:textColor="@color/white"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvAkun" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>