<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/primary"
    tools:context=".ui.activity.RegisterActivity">

    <ImageView
        android:id="@+id/ivLogo"
        android:layout_width="wrap_content"
        android:layout_height="0dp"
        android:padding="64dp"
        android:scaleType="centerCrop"
        android:src="@drawable/logo_fix"
        app:layout_constraintHeight_percent="0.25"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/lytConstraint"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:padding="24dp"
        android:background="@drawable/bg_rounded_top"
        app:layout_constraintHeight_percent="0.75"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ivLogo">

        <TextView
            android:id="@+id/tvRegister"
            style="@style/TextTitle"
            android:text="@string/registrasi"
            android:textSize="42sp"

            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/tvRegister">

            <EditText
                android:id="@+id/etEmail"
                style="@style/TextDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/it_stroke_rounded"
                android:padding="12dp"
                android:hint="@string/alamat_email" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytNama"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytEmail">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etNama"
                style="@style/TextDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/it_stroke_rounded"
                android:padding="12dp"
                android:hint="@string/nama_lengkap"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytPass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytNama">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etPass"
                style="@style/TextDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/it_stroke_rounded"
                android:hint="@string/password"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/lytRepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            app:endIconMode="password_toggle"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytPass">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etRepass"
                style="@style/TextDetail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/it_stroke_rounded"
                android:hint="@string/ulangi_password"
                android:padding="12dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/tvAkun"
            style="@style/TextDetail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/sudah_punya_akun"
            app:layout_constraintBottom_toTopOf="@+id/register"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/lytRepass" />

        <Button
            android:id="@+id/register"
            style="@style/TextDetail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textFontWeight="600"
            android:background="@drawable/btn_rounded"
            android:text="@string/registrasi"
            android:textColor="@color/white"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>